--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -31,7 +31,7 @@ address:
 office_hours:
   - 'Monday 10:00 to 13:00'
   - 'Wednesday 09:00 to 10:00'
-appointment_url: 'https://calendly.com'
+appointment_url: 'https://calendly.com/dbastola/15min'
 contact_links:
   - icon: twitter
     icon_pack: fab
