--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -66,7 +66,7 @@ contact_links:
   - icon: linkedin
     icon_pack: fab
     name: Connect with me
-    link: 'https://linkedin.com/in/dbastola'
+    link: 'https://www.linkedin.com/in/deepakbastola/'
   - icon: github
     icon_pack: fab
     name: Follow me
