--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -122,7 +122,7 @@ abstract_length: 135
 plugins_js: []
 plugins_css: ["custom"]
 avatar:
-  gravatar: true
+  gravatar: false
   shape: circle
 publications:
   date_format: January 2006
